# libsignal-csharp

./: .gitignore  .gitmodules  README.md  libsignal-csharp.slnx  plan.md
source/: libsignal-csharp.slnx  unit-testing.md
source/Signal.Interop/: AuthCredentialWithPniPresentationSafeHandle.cs  AuthCredentialWithPniResponseSafeHandle.cs  AuthCredentialWithPniSafeHandle.cs  GroupMasterKeySafeHandle.cs  GroupPublicParamsSafeHandle.cs  GroupSecretParamsSafeHandle.cs  SenderAddressSafeHandle.cs  SenderKeyDistributionMessageSafeHandle.cs  SenderKeyMessageSafeHandle.cs  SenderKeyRecordSafeHandle.cs  SenderKeyStoreVTable.cs  ServerPublicParamsSafeHandle.cs  ServerSecretParamsSafeHandle.cs  Signal.Interop.csproj  SignalCrypto.cs  readme.md
source/Signal.Interop.Tests/: Ed25519CryptoTests.cs  InMemorySenderKeyStore.cs  InteropTests.cs  Signal.Interop.Tests.csproj
source/signal_shim/: .gitignore  Cargo.toml  readme.md
source/signal_shim/src/: lib.rs
