[package]
name = "signal_shim"
version = "0.1.0"
edition = "2021"

[lib]
# 'cdylib' tells Rust to strip Rust-specific metadata and compile a clean native library (.dll/.so/.dylib)
crate-type = ["cdylib"]

[dependencies]
# We are now pointing to the local submodule so the AI can read the source
libsignal-protocol = { path = "../../external/libsignal/rust/protocol" }