[package]
name = "signal_shim"
version = "0.1.0"
edition = "2021"

[lib]
# 'cdylib' tells Rust to strip Rust-specific metadata and compile a clean native library (.dll/.so/.dylib)
crate-type = ["cdylib"]

[dependencies]
# We are now pointing to the local submodule so the AI can read the source
libsignal-protocol = { path = "../../external/libsignal/rust/protocol" }
libsignal-core = { path = "../../external/libsignal/rust/core" }
zkgroup = { path = "../../external/libsignal/rust/zkgroup" }
zeroize = "1"
bincode = "1"
serde = "1"
uuid = "1.23.3"
futures = "0.3"
rand = "0.9.4"
async-trait = "0.1"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
